[gd_scene load_steps=5 format=3 uid="uid://qa2nogtespyl"]

[ext_resource type="Script" path="res://scenes/dice_scenes/dice/dice.gd" id="1_yqq27"]
[ext_resource type="Texture2D" uid="uid://cuqvi8ycym3db" path="res://assets/dice/six sided die.png" id="2_2v5ed"]
[ext_resource type="Script" path="res://components/general_components/drag_and_drop.gd" id="3_5a26y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0arq3"]

[node name="dice" type="Area2D" groups=["die"]]
scale = Vector2(0.8, 0.8)
collision_layer = 15
collision_mask = 15
script = ExtResource("1_yqq27")

[node name="skin" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(10, 6.25)
scale = Vector2(1.25, 1.25)
texture = ExtResource("2_2v5ed")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 6.25)
shape = SubResource("RectangleShape2D_0arq3")

[node name="dragAndDrop" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("3_5a26y")
target = NodePath("..")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
